// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashtagMiddleSection Component should match snapshot 1`] = `
<React.Fragment>
  <MapPosts
    nothingMssg="No post with #travel tag found!!"
    posts={
      Array [
        <Connect(Post)
          comments_count={2}
          description="he @nobita, @doraemon #checkout, #dd #fgf"
          filter="filter-ashby"
          firstname="iam_"
          group_id={0}
          group_name=""
          imgSrc="instagram_1518972814710.jpg"
          likes_count={3}
          location="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
          post_id={89}
          post_time="1480114098767"
          shares_count={3}
          surname="vsocial"
          tags_count={1}
          type="user"
          user={24}
          username="vsocial"
          when="hashtag"
        />,
        <Connect(Post)
          comments_count={3}
          description="Hello @ghalib @vsocial #checkout"
          filter="filter-normal"
          firstname="iam_"
          group_id={0}
          group_name=""
          imgSrc="instagram_1518945386167.jpg"
          likes_count={0}
          location=""
          post_id={88}
          post_time="1480114098767"
          shares_count={1}
          surname="vsocial"
          tags_count={0}
          type="user"
          user={24}
          username="vsocial"
          when="hashtag"
        />,
      ]
    }
  />
  <SectionsEnd
    len={2}
  />
  <div
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
</React.Fragment>
`;

exports[`HashtagMiddleSection Component should show <Instagram/> loader when loading=true 1`] = `
<React.Fragment>
  <div
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
  <InstagramStyle />
  <MapPosts
    nothingMssg="No post with #travel tag found!!"
    posts={
      Array [
        <Connect(Post)
          comments_count={2}
          description="he @nobita, @doraemon #checkout, #dd #fgf"
          filter="filter-ashby"
          firstname="iam_"
          group_id={0}
          group_name=""
          imgSrc="instagram_1518972814710.jpg"
          likes_count={3}
          location="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
          post_id={89}
          post_time="1480114098767"
          shares_count={3}
          surname="vsocial"
          tags_count={1}
          type="user"
          user={24}
          username="vsocial"
          when="hashtag"
        />,
        <Connect(Post)
          comments_count={3}
          description="Hello @ghalib @vsocial #checkout"
          filter="filter-normal"
          firstname="iam_"
          group_id={0}
          group_name=""
          imgSrc="instagram_1518945386167.jpg"
          likes_count={0}
          location=""
          post_id={88}
          post_time="1480114098767"
          shares_count={1}
          surname="vsocial"
          tags_count={0}
          type="user"
          user={24}
          username="vsocial"
          when="hashtag"
        />,
      ]
    }
  />
  <SectionsEnd
    len={2}
  />
  <div
    style={
      Object {
        "marginBottom": 20,
      }
    }
  />
</React.Fragment>
`;
